assets/css/style.css
/* Import Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Roboto+Slab:wght@200;400;600&family=Roboto:wght@100;300;400&family=Satisfy&display=swap');

/* Customized Variables */
:root {
    --clr-white: #ffffff;
    --clr-black: #000000;
    --clr-raisin-black: #252627;
    --clr-outer-space: #264137;
    --clr-mughal-green: #336633;
    --clr-deep-moss: #266340;
    --clr-sea-green: #3a9561;
    --clr-dark-sea: #93C393;
    --clr-burlywood: #deb887;
    --clr-light-silver: #dad9d8;
}

/* UTILITIES */
.disabled-button {
    opacity: .2;
    pointer-events: none;
}

.hide {
    /* display: none; */
}

.invisible {
    visibility: hidden;
}

.overlay-bg {    /* covers entire body element */
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
}

.overlay-bgcolor {
    background-color: #25262775;
}

.btn-border {
    border: none;
    border-radius: 6px;
}

.btn-color {
    background-color: var(--clr-deep-moss);
}

.lightbox-bgcolor {    /* lightbox background color */
    background-color: var(--clr-raisin-black);
}

.lightbox-border {
    box-shadow: 0 0 5px 4px var(--clr-deep-moss);
}

/* Remove Default Global Styles */
* { 
    color: var(--clr-white);
    list-style: none;
    margin: 0;
    padding: 0;
    text-decoration: none;
}

html {
    height: 100%;
}

body {
    font-family: 'Roboto', sans-serif;
    background-color: var(--clr-raisin-black);
    height: 100%;
}

/* HOME PAGE [Start] */
#homepage-body {
    box-sizing: border-box;
    padding: 20vh 0 0;
}

#logo-wrapper {
    background-color: var(--clr-black);
    box-shadow: 2px 0 2px 10px var(--clr-mughal-green);
    height: 5rem;
    margin-bottom: 12vh;
}

#logo-homepage {
    border-radius: 5px;
    color: var(--clr-burlywood);
    font-family: 'Playfair Display', serif;
    font-size: 2.6rem;
    line-height: 5rem;
    margin: 0 auto;
    position: relative;
    text-align: center;
    width: 17.5rem;
}

#logo-span-1 {
    font-size: 2rem;
    position: absolute;
    top: -2.5rem;
    left: .1rem;
}

#logo-span-2 {
    font-size: 2rem;
    position: absolute;
    top: 2.5rem;
    right: .1rem;
}

#play-button {
    display: block;
    font-size: 1.2rem;
    font-weight: bold;
    letter-spacing: .2rem;
    line-height: 2.1rem;
    margin: .5rem auto;
    height: 2.1rem;
    width: 14rem;
    text-align: center;
    text-transform: uppercase;
}

#howtoplay-btn-homepage {    /* 'how to play' button */
    display: block;
    font-size: 1rem;
    letter-spacing: .1rem;
    line-height: 2.1rem;
    margin: .5rem auto;
    height: 2.1rem;
    width: 14rem;
    text-transform: uppercase;
}
/* HOME PAGE [End] */

/* GAME PAGE [Start] */
#gamepage-body {
    display: flex;
    flex-direction: column;
}

nav {    /* contains logo & nav menu */
    display: flex;
    flex-direction: column;
    align-items: center;
    row-gap: .5rem;
}

#logo-wrapper-nav {
    background-color: var(--clr-black);
    font-family: 'Playfair Display', serif;
    box-shadow: 2px 0 2px 5px var(--clr-mughal-green);
    margin: .3rem 0;
    height: 3rem;
    width: 100%;
}

#logo-nav {
    line-height: 3rem;
    text-align: center;
    width: 100%;
}

#logo-nav {
    color: var(--clr-burlywood);
}

#logo-nav > span {
    font-size: 1.1rem;
}

#nav-menu {
    display: flex;
    column-gap: 1rem;
    font-size: 1rem;
    justify-content: space-around;
    width: 90%;
}

#nav-menu li {
    padding: 0 .5rem;
    cursor: pointer;
}

#game-area-wrapper {
    display: flex;
    align-items: center;
    flex: 1 0 auto;
}

#game-area {
    display: flex;
    row-gap: 1rem;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    padding: 1rem 0;
}

#player-wrapper {
    border-radius: 6px;
    box-sizing: border-box;
    display: flex;
    column-gap: .5rem;
    align-items: center;
    justify-content: space-between;
    width: 90%;
}

#player-wrapper > * {
    font-size: .9rem;
}

#cash-earned {    /* cash earned */
    border: 2px solid var(--clr-deep-moss);
    border-radius: 20px;
    box-shadow: 0 0 5px 4px var(--clr-deep-moss);
    padding: .5rem 1rem;
}

#player-name,
#money-earned {     /* username & cash earned */
    color: var(--clr-burlywood);
    font-size: 1.1rem;
    text-transform: uppercase;
}

#money-container {    /* prize money display */
    background-image: linear-gradient(#F0E699, #E1CD33, #B6A733);
    border-radius: 4px;
    height: 3rem;
    width: 90%;
    overflow: auto;
}

#money-list {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin: .5rem 0;
}

[data-prize] {
    background-color: var(--clr-dark-sea);
    box-shadow: 0 0 3px 2px var(--clr-deep-moss);
    box-sizing: border-box;
    width: 70%;
    text-align: center;
    border-radius: 10px;
    font-family: 'Roboto Slab', serif;
    font-size: 1.5rem;
    margin: .2rem 0;
    position: relative;
    color: var(--clr-raisin-black);
    opacity: .8;
}

.highlight-prize {    /* highlight for cash prizes */
    background-color: var(--clr-deep-moss);
    color: var(--clr-white);
    box-sizing: border-box;
    box-shadow: 0 0 5px 5px var(--clr-light-silver);
    border-radius: 10px;
    min-width: 70%;
    text-align: center;
    padding: 0 1rem;
    opacity: 1;
}

.star {
    position: absolute;
    left: -10px;
    top: -7px;
    width: 3.2rem;
}

#life-lines {
    display: flex;
    column-gap: 2rem;
    row-gap: .8rem;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
}

#life-lines > h2 {
    font-size: 1.1rem;
    text-align: center;
    width: 100%;
}

.life-line-item {
    display: inline-block;
    border: 1px solid var(--clr-light-silver);
    width: 3.5rem;
    height: 3.5rem;
    text-align: center;
    position: relative;
}

.lifeline-icon {
    color: var(--clr-sea-green);
    font-size: 2.3rem;
    margin: .6rem 0;
}
/* ... */

